mescla de renovar a trinarq 1.4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ SERVICAD_AWS=http://ip-172-31-87-200.ec2.internal:8810/
 #SERVICAD_AWS=http://localhost:8010/
 ALL=all
 CREATE=create
+BITACORA=bitacora/
 DELETE=delete/
 UPDATE=update/
 AUTHORIZATION=authz/
@@ -81,6 +82,3 @@ USERS=users/
 USERSCUSTOMER=customer/
 USERSROLE=role/
 PERMANENTLY=permanently/
-
-
-
