--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://dbinstancesas.cr3qpucb3k46.us-east-1.rds.amazonaws.com:3306/trinarq?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=America/Bogota
 spring.datasource.username=trinarq_admin
 spring.datasource.password=RtiSas.2022Trinarq.*.
-#spring.datasource.url=jdbc:mysql://dbinstancesas.cr3qpucb3k46.us-east-1.rds.amazonaws.com:3306/trinarq?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=America/Bogota
-#spring.datasource.username=trinarq_admin
+#spring.datasource.url=jdbc:mysql://dbinstancesas.cr3qpucb3k46.us-east-1.rds.amazonaws.com:3306/renovar?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=America/Bogota
+#spring.datasource.username=renovar_admin
 #spring.datasource.password=RtiSas.2022Renovar.*.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
